examples/test/testpolicy5994.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5994
  namespace: namespace301
spec:
  podSelector:
    matchLabels:
      key8: value29
      key11: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value32
          key19: value10
          key39: value0
      podSelector:
        matchLabels:
          key42: value29
          key48: value25
